fixed date parsing for new shifts, grid styling

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -140,7 +140,7 @@ $font-family-serif: 'Droid Serif', serif;
 // $last-child-float: $opposite-direction;
 
 // We use these to make sure border radius matches unless we want it different.
-$global-radius: 5px;
+$global-radius: 8px;
 // $global-rounded: 1000px;
 
 // We use these to control inset shadow shiny edges and depressions.
@@ -422,7 +422,7 @@ $header-font-family: $font-family-serif;
 
 // We use these to build padding for buttons.
 // $button-tny: rem-calc(10);
-// $button-sml: rem-calc(14);
+$button-sml: rem-calc(12);
 // $button-med: rem-calc(16);
 // $button-lrg: rem-calc(18);
 
@@ -435,7 +435,7 @@ $header-font-family: $font-family-serif;
 // $button-font-color: $white;
 // $button-font-color-alt: $oil;
 // $button-font-tny: rem-calc(11);
-// $button-font-sml: rem-calc(13);
+$button-font-sml: rem-calc(16);
 // $button-font-med: rem-calc(16);
 // $button-font-lrg: rem-calc(20);
 // $button-font-weight: $font-weight-normal;
